--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -1,25 +1,27 @@
 .nav-wrapper {
-    display: block;
-    position: fixed;
-    width: 100%;
-    z-index: 5;
-    background-color: white;
+  display: block;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+  background-color: white;
+  
 }
 
 .nav-links {
-    float: right;
+  float: right;
 }
 
 .nav-logo-group {
   float: left;
-  padding: 5px 0 0 0;
+  padding: 15px 0 0 0;
   display: flex;
   align-items: center;
 }
 
 .nav-logo {
-    width: 100px;
-    padding: 5px 0px 5px 10px;
+  width: 125px;
+  padding: 5px 0px 5px 10px;
+
 }
 
 .nav-logo-font {
@@ -30,7 +32,7 @@
   padding: 0 0 0 5px;
   line-height: 18px;
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.6em;
   color: #3D3F96;
   font-family: "Mont-Heavy";
 }
@@ -41,20 +43,78 @@
   margin-top: -5px; /* change this to whatever height you want it */
 }
 
-@media screen and (max-width: 1000px) {
+.nav-btn-wrapper {
+  padding: 10px 25px;
+  font-weight: 600;
+  font-size: 16px;
+  width: auto;
+  background: transparent;
+  outline: none !important;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+
+.nav-btn {
+  border: 2px solid #C92C3D;
+  z-index: 1;
+  color: #C92C3D;
+}
+.nav-btn:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #C92C3D;
+  transition: all 0.3s ease;
+}
+.nav-btn:hover {
+  color: #fff;
+}
+.nav-btn:hover:after {
+  top: auto;
+  bottom: 0;
+  height: 100%;
+}
+.nav-btn:active {
+  top: 2px;
+}
+
+@media screen and (max-width: 1350px) {
     .nav-logo-font {
-        font-size: 0.8em;
+      font-size: 0.8em;
+    }
+
+    .nav-logo-group {
+      padding: 5px 0;
     }
 
     .nav-logo {
       width: 75px;
-  }
+    }
+
+    .nav-btn {
+      border: 2px solid #C92C3D;
+      color: #fff;
+    }
+    .nav-btn:after {
+      background: #C92C3D;
+    }
+    .nav-btn:hover {
+      color: #fff;
+    }
 }
 
 .nav-links ul {
-    padding: 0;
-    display: flex;
-  }
+  padding: 0;
+  display: flex;
+  align-items: center;
+
+}
 
   .nav-links ul li {
     list-style: none;
