--- a/src/assets/css/Text.css
+++ b/src/assets/css/Text.css
@@ -166,7 +166,7 @@ h3 {
         line-height: 28px !important;
     }
     h3 {
-        font-size: 1em !important;
+        font-size: 1.4em !important;
         line-height: 25px !important;
     }
 }
